--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,5 @@
 
-.highlight {
+div.highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
@@ -11,6 +11,7 @@
 }
 
 code {
+  font-size: medium;
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
 
